src/index.css
body {
  font: 14px "Century Gothic", Futura, sans-serif;
  margin: 20px;
  height: 80vh;
}

ol, ul {
  padding-left: 30px;
}

.board-row:after {
  clear: both;
  content: "";
  display: table;
}

.status {
  margin-bottom: 10px;
}

.square {
  background: #fff;
  margin: 0px;
  float: left;
  font-size: 24px;
  font-weight: bold;
  line-height: 34px;
  height: 34px;
  padding: 0;
  text-align: center;
  width: 34px;
}

.game-board .main .square {
  font-size: 72px;
  line-height: 102px;
  height: 102px;
  width: 102px;
}

.empty:hover {
  border: 2px green solid;
}

.occupied:hover {
  border: 2px red solid;
}

.kbd-navigation .square:focus {
  background: #ddd;
}

.game {
  display: flex;
  flex-direction: row;
}

.game-info {
  height: 80vh;
  width: 50vw;
  float: right;
  display: inline-block;
  overflow: auto;
}

.game-board {
  height: 80vh;
  width: 40vw;
  display: inline-block;
  float: left;
}

.move-history {
  display: inline-block;
}

.move-history li{
  display: inline-block;
  margin: 8px;
}

.status {
  display: block;
  vertical-align: top;
  margin: 10px;
  font-size: 32px;
}

.status div {
  margin-bottom: 10px;
}

